package dominio;

public abstract class Caracteristica {
}
