package dominio;

public class Castracion extends Caracteristica{
  private Boolean estaCastrado;
}
