package dominio;

public class Color {

  private Integer rojo;
  private Integer verde;
  private Integer azul;
}
