package dominio;

public class ColorPrincipal extends Caracteristica{
  private Color color;
}
