package dominio;

public class ColorSecundario extends Caracteristica{
  private Color color;
}
