package dominio;

public class Foto {
}
