package dominio;

public enum TipoDocumento {
  DNI, LC, LE, CI, PASAPORTE
}
