package dominio;

public enum TipoMascota {

  GATO, PERRO
}
