package dominio;

public class Ubicacion {
}
