@startuml
class dominio.Persona {
- String nombre
- String apellido
- LocalDate fechaNacimiento
- String numeroDocumento
- Integer telefono
- String email
- void validarPersona(String,String,Integer,String)
}
class mascota.Mascota {
- String nombre
- String apodo
- LocalDate fechaDeNacimientoAproximada
- Boolean esMacho
- String descripcionFisica
}
class mascota.RepositorioCaracteristicas {
}
class mascota.InformeMascotaEncontrada {
- String descripcionEstadoActual
- String direccionRescatista
- LocalDate fechaEncuentro
- void validarInforme(List<Foto> fotos)
}
class mascota.Foto {
}
abstract class mascota.Caracteristica {
}
class mascota.ColorPrincipal {
}
class mascota.ColorSecundario {
}
class mascota.Castracion {
- Boolean estaCastrado
}
class mascota.Color {
- Integer rojo
- Integer verde
- Integer azul
}
class mascota.Ubicacion {
}
class mascota.RepositorioInformesMascotasEncontradas {
+ List<MascotaEncontrada> ListarMascotasEncontradasEnUltimos10Dias()
}
abstract class dominio.Usuario {
- String usuario
- String contrasenia
- void validarContrasenia(String contrasenia)
}
class dominio.DuenioMascota {
}
class dominio.Administrador {
}
class dominio.Voluntario {

}
class dominio.ValidadorContrasenias {
+ void validar(String contrasenia);
}
Interface dominio.Validador {
+ void validar(String contrasenia);
}
class dominio.ValidadorLargoMinimo {
+ void validar(String contrasenia)
}
class dominio.ValidadorContraseniasComunes {
- BufferedReader archivoContrasenias
+ void validar(String contrasenia)
}

enum dominio.TipoDocumento{
DNI
LC
LE
CI
PASAPORTE
}
enum mascota.TipoMascota{
PERRO
GATO
}

dominio.ValidadorContrasenias <.. dominio.Usuario
dominio.Validador "*" <-- dominio.ValidadorContrasenias: validadores
dominio.Validador <|.. dominio.ValidadorLargoMinimo
dominio.Validador <|.. dominio.ValidadorContraseniasComunes
dominio.Persona <-- dominio.DuenioMascota: duenioMascota
dominio.TipoDocumento <-- dominio.Persona: tipoDocumento
mascota.Mascota "*" <-- dominio.DuenioMascota: mascotas
mascota.Caracteristica "*" <-- mascota.RepositorioCaracteristicas: caracteristicas
mascota.TipoMascota <-- mascota.Mascota: tipoMascota
mascota.Foto "*" <-- mascota.Mascota: fotos
mascota.Caracteristica "*" <-- mascota.Mascota: caracteristicas
mascota.Caracteristica <|-- mascota.Castracion
mascota.Caracteristica <|-- mascota.ColorPrincipal
mascota.Caracteristica <|-- mascota.ColorSecundario
dominio.Usuario <|-- dominio.DuenioMascota
dominio.Usuario <|-- dominio.Administrador
dominio.Usuario <|-- dominio.Voluntario

mascota.InformeMascotaEncontrada "*" <-- mascota.RepositorioInformesMascotasEncontradas: informesMascotasEncontradas
mascota.Foto "*" <-- mascota.InformeMascotaEncontrada: fotos
mascota.Ubicacion <-- mascota.InformeMascotaEncontrada: ubicacion
dominio.Persona <-- mascota.InformeMascotaEncontrada: rescatista
mascota.Color <-- mascota.ColorPrincipal: color
mascota.Color <-- mascota.ColorSecundario: color

@enduml